--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: sehhong <sehhong@student.42.fr>            +#+  +:+       +#+         #
+#    By: sehee <sehee@student.42seoul.kr>           +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/08 17:15:30 by sehhong           #+#    #+#              #
-#    Updated: 2021/10/06 15:21:56 by sehhong          ###   ########.fr        #
+#    Updated: 2021/10/31 18:04:31 by sehee            ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,8 @@ FILES_M = ft_memset ft_bzero ft_memcpy ft_memccpy ft_memmove ft_memchr \
 		 ft_putchar_fd ft_putstr_fd ft_putendl_fd ft_putnbr_fd \
 		 ft_malloc_fail_int ft_malloc_fail_str ft_ptr_free \
 		 ft_strcopy_with_delimiter ft_strncpy ft_abs_int \
-		 ft_split_argument
+		 ft_split_argument ft_find_max ft_find_min ft_str_to_int \
+		 ft_print_error_and_exit
 
 FILES_B = ft_lstnew ft_lstadd_front ft_lstsize ft_lstlast ft_lstadd_back \
 		 ft_lstdelone ft_lstclear ft_lstiter ft_lstmap
